[package]
name = "ebpf-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
ebpf-demo-common = { path = "../ebpf-demo-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
network-types = "0.0.4"
[[bin]]
name = "ebpf-demo"
path = "src/main.rs"
[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"